@@ -1,3 +1,9 @@
+Tue Aug 21 04:42:05 2001  George Lebl <jirka@5z.com>
+
+	* gui/gdmconfig.[ch]:  Finish the editting of the server definitions.
+	  BTW, this is incredibly evil and ugly code and should be cleaned
+	  up one of these days.  I feel sort of dirty for doing it :)
+
 Tue Aug 21 03:03:49 2001  George Lebl <jirka@5z.com>
 
 	* configure.in: raise version number
